Añadida posibilidad de buscar usuarios por nombre en la API
